# python-projects

./: .gitignore  .justfile  .pre-commit-config.yaml  .prettierrc  commitlint.config.js  dockerfile  justfile  main.py  package-lock.json  package.json  pyproject.toml  renovate.json  sonar-project.properties
.github/workflows/: ci.yaml
app/: main.py
src/python_projects/: main.py
tests/: main_test.py
