[project]
name = "python-projects"
version = "0.1.0"
description = "Python Projects"
readme = "README.md"
requires-python = "==3.14.0"
dependencies = [
  "typer==0.20.0",
]

[dependency-groups]
dev = [
  "mypy==1.18.2",
  "pre-commit==4.5.0",
  "pytest==9.0.1",
  "pytest-cov==7.0.0",
  "ruff==0.14.6",
]

[tool.uv]
add-bounds = "exact"

[tool.ruff]
line-length = 120
indent-width = 2
exclude = ["__init__.py", "tests"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = ['ALL']
ignore = [
  'Q000', # bad-quotes-inline-string
  'D203', # incorrect-blank-line-before-class
  'D212', # multi-line-summary-first-line
]

[tool.mypy]
strict = true
exclude = "tests"

[tool.pytest.ini_options]
addopts = ["--cov=app", "--cov-report=html"]
