[project]
name = "python-projects"
version = "0.1.0"
description = "Python Projects"
readme = "README.md"
requires-python = "==3.14.3"
dependencies = ["typer==0.24.1"]

[dependency-groups]
dev = [
  "prek==0.3.3",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "ruff==0.15.2",
  "ty==0.0.18",
]

[tool.uv]
add-bounds = "exact"
required-version = ">=0.10"

[tool.ruff]
line-length = 120
indent-width = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Recommended to disable
  "COM812", # missing-trailing-comma
  "COM819", # prohibited-trailing-comma
  "D206",   # docstring-tab-indentation
  "D207",   # under-indentation
  "D208",   # over-indentation
  "D300",   # triple-single-quotes
  "E111",   # indentation-with-invalid-multiple
  "E114",   # indentation-with-invalid-multiple-comment
  "E117",   # over-indented
  "Q",      # flake8-quotes
  "W191",   # tab-indentation

  # "D100", # undocumented-public-module
  # "D101", # undocumented-public-class
  # "D102", # undocumented-public-method
  # "D103", # undocumented-public-function
  "D104", # undocumented-public-package
  # "D105", # undocumented-magic-method
  # "D106", # undocumented-public-nested-class
  # "D107", # undocumented-public-init
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
  "D100", # undocumented-public-module
  "D101", # undocumented-public-class
  "D102", # undocumented-public-method
  "D103", # undocumented-public-function
  "D104", # undocumented-public-package
  "D105", # undocumented-magic-method
  "D106", # undocumented-public-nested-class
  "D107", # undocumented-public-init
  "S101", # assert
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
addopts = [
  "--cov=app --cov-report=html --cov-report=xml --cov-report=term-missing --cov-fail-under=0",
]
pythonpath = "."
xfail_strict = true

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*/*_test.py"]
parallel = true

[tool.coverage.report]
show_missing = true
